# gke-workshop

./: .gitignore  README.adoc  api.tf  backup-upload.sh  cluster.tf  locals.tf  neo4j.tf  outputs.tf  providers.tf  terraform.tf  variables.tf
loadtest/: README.adoc  example-queries.cql  load_test.py  pyproject.toml
modules/api/: Dockerfile  README.adoc  main.tf  outputs.tf  pyproject.toml  token.tf  variables.tf
modules/api/app/: main.py  neo4j_client.py  security.py
modules/api/rest/: http-client.env.json  rest-api.http
modules/api/tools/: push.py
modules/api/ui/: index.html  package.json  tsconfig.json  vite.config.ts
modules/api/ui/src/: App.tsx  main.tsx
modules/api/ui/src/context/: AuthProvider.tsx
modules/api/ui/src/pages/: Convert.tsx  CreateUsers.tsx  Login.tsx  UserList.tsx
modules/gke/: dns.tf  firewall.tf  main.tf  outputs.tf  variables.tf  vpc.tf
modules/neo4j/: main.tf  variables.tf
modules/neo4j/helm-values/: neo4j-values.yaml.tpl
modules/neo4j/templates/: certificate.yaml.tpl  cluster_issuer.yaml.tpl
