[project]
name = "neo4j-workshop-api"
version = "0.1.14"
description = "Flask-based Neo4j user+DB management API and UI"
dependencies = [
    "flask>=2.2",
    "neo4j>=5.0",
    "reportlab",
    "petname"
]

[tool.setuptools.packages.find]
include = ["app"]

[tool.neo4j-api]
project = "neo4j-field-engineering-emea"
region = "europe-west1"
repo = "neo4j-api-repo"
image = "neo4j-workshop-api"
